kubernetes/security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-ingress
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
              gateway.envoyproxy.io/owning-gateway-name: demo
              gateway.envoyproxy.io/owning-gateway-namespace: demo
      ports:
        - protocol: TCP
          port: 8080
  egress: []
